--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
         if: always()
         run: |
           if [ -f "test_results/unit-test-results.xml" ]; then
-            python3 << 'EOF'
+            python3 << EOF
             import xml.etree.ElementTree as ET
             import os
 
@@ -188,7 +188,7 @@ jobs:
           fi
           
           if [ -n "$TEST_RESULTS_TABLE" ]; then
-            echo "### 🔍 Individual Test Results" >> $GITHUB_STEP_SUMMARY
+            echo "### 🔍 Individual Test Results" >> $GITHUB_STEP_SUMMARY收获
             echo "$TEST_RESULTS_TABLE" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
           fi
@@ -291,7 +291,7 @@ jobs:
         if: always()
         run: |
           if [ -f "test_results/selenium-test-results.xml" ]; then
-            python3 << 'EOF'
+            python3 << EOF
             import xml.etree.ElementTree as ET
             import os
 
@@ -324,7 +324,7 @@ jobs:
             echo "### 📊 UI Test Results Overview" >> $GITHUB_STEP_SUMMARY
             echo "- **Total Tests**: $SELENIUM_TESTS_TOTAL" >> $GITHUB_STEP_SUMMARY
             echo "- **Passed**: $SELENIUM_TESTS_PASSED ✅" >> $GITHUB_STEP_SUMMARY
-            echo "- **Failed**: $SELENIUM_TESTS_FAILED ❌" >> $GITHUB_STEP_SUMMARY
+            echo "- **Failed**: $SELENIUM_TESTS_FAILED ❌" >> $GITHUB_STEP_SUMMARY structure
             echo "- **Errors**: $SELENIUM_TESTS_ERROR 🔥" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             
@@ -388,42 +388,42 @@ jobs:
           xml_file="artifacts/test-results-3.11/test_results/unit-test-results.xml"
           if [ -f "$xml_file" ]; then
             echo "### 🐍 Python 3.11 Unit & Integration Tests" >> report.md
-            cat <<-'PYTHON_SCRIPT' > gen_unit_report.py
-                import xml.etree.ElementTree as ET
-                import os
-                import sys
-                try:
-                    tree = ET.parse('artifacts/test-results-3.11/test_results/unit-test-results.xml')
-                    root = tree.getroot()
-                    if root.tag == 'testsuites':
-                        total = sum(int(suite.get('tests', 0)) for suite in root.findall('testsuite'))
-                        failures = sum(int(suite.get('failures', 0)) for suite in root.findall('testsuite'))
-                        errors = sum(int(suite.get('errors', 0)) for suite in root.findall('testsuite'))
-                    else:
-                        total = int(root.get('tests', 0))
-                        failures = int(root.get('failures', 0))
-                        errors = int(root.get('errors', 0))
-                    passed = total - failures - errors
-                    coverage = 0
-                    try:
-                        if os.path.exists('artifacts/test-results-3.11/tests/reports/coverage_unit.xml'):
-                            cov_tree = ET.parse('artifacts/test-results-3.11/tests/reports/coverage_unit.xml')
-                            cov_root = cov_tree.getroot()
-                            coverage = float(cov_root.get('line-rate', 0)) * 100
-                    except:
-                        pass
-                    print(f"- **Total Tests**: {total}")
-                    print(f"- **Passed**: {passed} ✅")
-                    print(f"- **Failed**: {failures} ❌")
-                    print(f"- **Errors**: {errors} 🔥")
-                    if total > 0:
-                        print(f"- **Pass Rate**: {passed * 100 // total}%")
-                    print("")
-                    with open('/tmp/unit_3.11.txt', 'w') as tf:
-                        tf.write(f"{total},{passed},{failures},{errors},{coverage}")
-                except Exception as e:
-                    print(f"❌ Error processing Python 3.11 results: {e}\n")
-            PYTHON_SCRIPT
+            cat << EOF > gen_unit_report.py
+import xml.etree.ElementTree as ET
+import os
+import sys
+try:
+    tree = ET.parse('artifacts/test-results-3.11/test_results/unit-test-results.xml')
+    root = tree.getroot()
+    if root.tag == 'testsuites':
+        total = sum(int(suite.get('tests', 0)) for suite in root.findall('testsuite'))
+        failures = sum(int(suite.get('failures', 0)) for suite in root.findall('testsuite'))
+        errors = sum(int(suite.get('errors', 0)) for suite in root.findall('testsuite'))
+    else:
+        total = int(root.get('tests', 0))
+        failures = int(root.get('failures', 0))
+        errors = int(root.get('errors', 0))
+    passed = total - failures - errors
+    coverage = 0
+    try:
+        if os.path.exists('artifacts/test-results-3.11/tests/reports/coverage_unit.xml'):
+            cov_tree = ET.parse('artifacts/test-results-3.11/tests/reports/coverage_unit.xml')
+            cov_root = cov_tree.getroot()
+            coverage = float(cov_root.get('line-rate', 0)) * 100
+    except:
+        pass
+    print(f"- **Total Tests**: {total}")
+    print(f"- **Passed**: {passed} ✅")
+    print(f"- **Failed**: {failures} ❌")
+    print(f"- **Errors**: {errors} 🔥")
+    if total > 0:
+        print(f"- **Pass Rate**: {passed * 100 // total}%")
+    print("")
+    with open('/tmp/unit_3.11.txt', 'w') as tf:
+        tf.write(f"{total},{passed},{failures},{errors},{coverage}")
+except Exception as e:
+    print(f"❌ Error processing Python 3.11 results: {e}\n")
+EOF
             python3 gen_unit_report.py >> report.md
             rm gen_unit_report.py
           else
@@ -435,33 +435,33 @@ jobs:
           selenium_xml="artifacts/selenium-test-results/test_results/selenium-test-results.xml"
           if [ -f "$selenium_xml" ]; then
             echo "### 🌐 Selenium UI Tests" >> report.md
-            cat <<-'PYTHON_SCRIPT' > gen_selenium_report.py
-                import xml.etree.ElementTree as ET
-                import os
-                try:
-                    tree = ET.parse('artifacts/selenium-test-results/test_results/selenium-test-results.xml')
-                    root = tree.getroot()
-                    if root.tag == 'testsuites':
-                        total = sum(int(suite.get('tests', 0)) for suite in root.findall('testsuite'))
-                        failures = sum(int(suite.get('failures', 0)) for suite in root.findall('testsuite'))
-                        errors = sum(int(suite.get('errors', 0)) for suite in root.findall('testsuite'))
-                    else:
-                        total = int(root.get('tests', 0))
-                        failures = int(root.get('failures', 0))
-                        errors = int(root.get('errors', 0))
-                    passed = total - failures - errors
-                    print(f"- **Total Tests**: {total}")
-                    print(f"- **Passed**: {passed} ✅")
-                    print(f"- **Failed**: {failures} ❌")
-                    print(f"- **Errors**: {errors} 🔥")
-                    if total > 0:
-                        print(f"- **Pass Rate**: {passed * 100 // total}%")
-                    print("")
-                    with open('/tmp/selenium.txt', 'w') as tf:
-                        tf.write(f"{total},{passed},{failures},{errors}")
-                except Exception as e:
-                    print(f"❌ Error processing Selenium results: {e}\n")
-            PYTHON_SCRIPT
+            cat << EOF > gen_selenium_report.py
+import xml.etree.ElementTree as ET
+import os
+try:
+    tree = ET.parse('artifacts/selenium-test-results/test_results/selenium-test-results.xml')
+    root = tree.getroot()
+    if root.tag == 'testsuites':
+        total = sum(int(suite.get('tests', 0)) for suite in root.findall('testsuite'))
+        failures = sum(int(suite.get('failures', 0)) for suite in root.findall('testsuite'))
+        errors = sum(int(suite.get('errors', 0)) for suite in root.findall('testsuite'))
+    else:
+        total = int(root.get('tests', 0))
+        failures = int(root.get('failures', 0))
+        errors = int(root.get('errors', 0))
+    passed = total - failures - errors
+    print(f"- **Total Tests**: {total}")
+    print(f"- **Passed**: {passed} ✅")
+    print(f"- **Failed**: {failures} ❌")
+    print(f"- **Errors**: {errors} 🔥")
+    if total > 0:
+        print(f"- **Pass Rate**: {passed * 100 // total}%")
+    print("")
+    with open('/tmp/selenium.txt', 'w') as tf:
+        tf.write(f"{total},{passed},{failures},{errors}")
+except Exception as e:
+    print(f"❌ Error processing Selenium results: {e}\n")
+EOF
             python3 gen_selenium_report.py >> report.md
             rm gen_selenium_report.py
           else
@@ -509,7 +509,7 @@ jobs:
           echo "=== Generated Report Content ==="
           cat report.md
 
-      - name: Generate step summary
+      - name: Generate step summary (Pipeline Summary First)
         run: |
           echo "## 📊 Pipeline Summary" > $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
